[FIX] css: Remove unit from line-height definition as it fails on large font sizes
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41282 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/jqui.css
+++ b/styles/jqui.css
@@ -11,7 +11,7 @@
 /***** XHTML Elements (body tag here,
 			others follow Layout) *****/
 body {
-	font: 76%/1.5em Verdana,Arial,sans-serif;
+	font: 76%/1.5 Verdana,Arial,sans-serif;
 	color: #000;
 	background: #fff}
 
