[FIX]Spacing between items in jquery.s5 lists (ugly reading without them as default values)
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41300 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -2388,6 +2388,10 @@ div.aclabel, span.aclabel, label.aclabel {
 .s5-slide h1, .s5-slide h2, .s5-slide h3, .s5-slide h4 {
 	line-height: 1em;
 }
+.s5-slide * li {
+	padding-top: 0.3em;
+	padding-bottom: 0.3em;
+}
 
 /* structures tiki 9 */
 
