[FIX]Readable minimum size for the footer, and documented in doc.t.o/slideshow how to tweak more for custom  needs
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41322 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -2392,6 +2392,9 @@ div.aclabel, span.aclabel, label.aclabel {
 	padding-top: 0.3em;
 	padding-bottom: 0.3em;
 }
+.s5-footer {
+  font-size:100%;
+}
 
 /* structures tiki 9 */
 
