[FIX] Minor tab appearance adjustments.
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41351 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/snow.css
+++ b/styles/snow.css
@@ -585,6 +585,7 @@ td.heading,
 .tabmark a:hover {
 	color: black;
 	background: #b1c1db url(snow/flakesptn3.jpg);
+	text-decoration: none;
 }
 	
 .tabactive {
