--- a/styles/eatlon.css
+++ b/styles/eatlon.css
@@ -579,31 +579,31 @@ td.even,
 	display: none;
 }
 
-.tabs span {
+/*.tabs span {
 	display: block;
 	float: left;
-}
+}*/
 
 .tabmark {
 	float: left;
 	background: #afafaf url(eatlon/menu_bg.png) 1000px -15px;
 	color: #fff;
+	border-top: 1px solid #f3f3f4;
+	border-left: 1px solid #f3f3f4;
+	border-right: 1px solid #878689;
 	border-bottom-width: 0 !important;
 	margin: 0 .2em -1px 0;}
 
 .tabmark a {
-	border-top: 1px solid #f3f3f4;
-	border-left: 1px solid #f3f3f4;
-	border-right: 1px solid #878689;
-	color: #fff}
+	color: #fff;
+}
 
 .tabmark a:hover {
 	background: url(eatlon/menu_bg.png) 1000px 0;
-	color: #ececec}
+	color: #9cf}
 
 .tabactive a {
-	color: #d7e5f3;
-	font-weight: bold;
+	color: #9cf;
 }
 
 .statuson {
