--- a/styles/arcturus.css
+++ b/styles/arcturus.css
@@ -11,7 +11,8 @@
 /***** XHTML Elements (body tag here,
 			others follow Layout) *****/ 
 body {
-	font: 76%/1.4em Verdana, Geneva, Arial, Helvetica, sans-serif;
+	font: 76% Verdana, Geneva, Arial, Helvetica, sans-serif;
+	line-height: 1.4;
 	color: #000;
 	background: #efefe7
 }
