--- a/styles/business.css
+++ b/styles/business.css
@@ -11,7 +11,8 @@
 /***** XHTML Elements (body tag here, others follow Layout) *****/
 
 body {
-	font: 70%/1.4em Verdana, Geneva, Arial, Helvetica, sans-serif;
+	font: 70% Verdana, Geneva, Arial, Helvetica, sans-serif;
+	line-height: 1.4;
 	color: #848484;
 }
 
