--- a/styles/eatlon.css
+++ b/styles/eatlon.css
@@ -18,9 +18,11 @@ body {
 	background: #9faec2 url(eatlon/body_bg.gif) repeat-x;
 	font-family: arial, sans-serif;
 	color: #8f8f8f;
-	font: 76%/1.4em Verdana, Geneva, Arial, Helvetica, sans-serif}
+	font: 76% Verdana, Geneva, Arial, Helvetica, sans-serif;
+	line-height: 1.5;
+}
 
-html>body {font-size: 76% !important}
+html>body {font-size: 76%}
 body.fullscreen {padding: 3em}
 
 /* next two: fixed-width: 960px */
