--- a/styles/fivealive.css
+++ b/styles/fivealive.css
@@ -19,7 +19,8 @@ html {
 			others follow Layout) *****/ 
 body {
 	background-color: #fff;
-	font: 76%/1.5em Arial, Helvetica, sans-serif;
+	font: 76% Arial, Helvetica, sans-serif;
+	line-height: 1.5;
 	color: #000;
 }
 
