--- a/styles/ohia.css
+++ b/styles/ohia.css
@@ -13,7 +13,8 @@
 /***** XHTML Elements (body tag here,
 			others follow Layout) *****/
 body {
-	font: 67%/1.4em Verdana, Geneva, Arial, Helvetica, sans-serif;
+	font: 67% Verdana, Geneva, Arial, Helvetica, sans-serif;
+	line-height: 1.4;
 	background: #242424;
 }
 
@@ -155,7 +156,7 @@ input[type="submit"],
 	padding: 1px 4px;
 	margin: 2px;
 	color: #fd0006;
-	font: Verdana, Geneva, Arial, Helvetica, sans-serif !important;
+	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif !important;
 	font-size: 11px;
 	border: 1px solid #5f5f5f;
 	border-right: 1px solid #474747;
@@ -211,7 +212,7 @@ label {margin: 0 2px}
 }
 
 #top_modules .siteloginbar_popup a.login_link {
-	display; block;
+	display: block;
 	padding: 4px 6px;
 }
 
