Project name updated in file's descriptive comment.
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41353 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/abse.css
+++ b/styles/abse.css
@@ -1,4 +1,4 @@
-/* $Id$ The absE theme for Tiki CMS/Groupware by Gary Cunningham-Lee (chibaguy)
+/* $Id$ The absE theme for Tiki Wiki CMS Groupware by Gary Cunningham-Lee (chibaguy)
 	is based on the visual design of the absE theme for openbox by crimeboy
 	(http://celo.wordpress.com/) and uses the *litecss source-ordered layout
 	solution by luci (http://sourceforge.net/projects/litecss). For more
