--- a/styles/arcturus.css
+++ b/styles/arcturus.css
@@ -1,5 +1,5 @@
 /* $Id$
-	Arcturus theme (arcturus.css) for Tikiwiki CMS/Groupware.
+	Arcturus theme (arcturus.css) for Tiki Wiki CMS Groupware.
 	Visit http://themes.tiki.org for more information.
 */
  
