--- a/styles/coelesce.css
+++ b/styles/coelesce.css
@@ -1,5 +1,5 @@
 /*
- * Coelesce theme (coelesce.css) for TikiWiki CMS/Groupware,
+ * Coelesce theme (coelesce.css) for Tiki Wiki CMS Groupware,
  * original design by Patrick Allard. Distributed under the LGPL license.
  */
 
