--- a/styles/darkroom.css
+++ b/styles/darkroom.css
@@ -1,5 +1,5 @@
 /*
- * The Darkroom theme for TikiWiki CMS/Groupware.
+ * The Darkroom theme for Tiki Wiki CMS Groupware.
  * Released under the LGPL license. 
  * For more information on Darkroom, please visit http://themes.tiki.org.
  */
