--- a/styles/darkshine.css
+++ b/styles/darkshine.css
@@ -1,5 +1,5 @@
 /* $Id$
-	Dark Shine theme for TikiWiki CMS/Groupware. This is an adaptation
+	Dark Shine theme for Tiki Wiki CMS Groupware. This is an adaptation
 	of the original by Jack Qiao (http://www.pureweb.ca/blog/).
 	This is released under the GNU/LGPL license.
 	For more information, etc., visit http://zukakakina.com or
