--- a/styles/feb12.css
+++ b/styles/feb12.css
@@ -1,4 +1,4 @@
-/* Feb12 theme for TikiWiki CMS/Groupware, released under LGPL license.
+/* Feb12 theme for Tiki Wiki CMS Groupware, released under LGPL license.
  * See http://themes.tikwiki.org for more information. -- */
 
 /* import default layout and styles: */
