--- a/styles/jqui.css
+++ b/styles/jqui.css
@@ -1,5 +1,5 @@
 /* $Id$
-	Jqui (jqui.css) for Tikiwiki CMS/Groupware.
+	Jqui (jqui.css) for Tiki Wiki CMS Groupware.
 	Visit http://themes.tiki.org for more information.
 */
 
