--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -1,5 +1,5 @@
 /* $Id$
-	This TikiWiki CMS/Groupware file contains common design
+	This Tiki Wiki CMS Groupware file contains common design
 	properties and, similar to lite.css and layout.css for
 	layout properties, is to be imported by theme stylesheets.
 */
