--- a/styles/ohia.css
+++ b/styles/ohia.css
@@ -1,5 +1,5 @@
 /* $Id$
- * Ohia is an original theme for TikiWiki CMS/Groupware by
+ * Ohia is an original theme for Tiki Wiki CMS Groupware by
  * Gary Cunningham-Lee (chibaguy), released under the GNU LGPL license.
  * This theme uses the *litecss source-ordered layout solution (http://sourceforge.net/projects/litecss).
  * For more information, please visit http://themes.tiki.org or http://zukakakina.com.
