--- a/styles/twist.css
+++ b/styles/twist.css
@@ -1,5 +1,5 @@
 /* $Id$
-	Twist for TikiWiki CMS/Broupware 1.9 was created by Gary Griffin and
+	Twist for Tiki Wiki CMS Groupware 1.9 was created by Gary Griffin and
 	contributed for downloading at http://themes.tiki.org.
 	The Twist theme was updated and
 	committed to the Tiki Subversion repository by Gary Cunningham-Lee (chibaguy).
