--- a/styles/business.css
+++ b/styles/business.css
@@ -1,5 +1,5 @@
 /* $Id$
-	Business theme stylesheet (business.css) for Tikiwiki CMS/Groupware,
+	Business theme stylesheet (business.css) for Tiki Wiki CMS Groupware,
 	based on the original by Eatlon.com (http://eatlon.com/work/business/).
 	Visit http://themes.tiki.org for more information.
 
