--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -1,5 +1,5 @@
 /* $Id$
-	Skeleton theme (skeleton.css) for Tikiwiki CMS/Groupware.
+	Skeleton theme (skeleton.css) for Tiki Wiki CMS Groupware.
 	Simplified tiki.tpl file and no-content theme CSS file.
 	Visit http://themes.tiki.org for more information.
 */
