--- a/styles/snow.css
+++ b/styles/snow.css
@@ -1,4 +1,4 @@
-/* $Id$ The Snow theme for TikiWiki CMS/Groupware is an original
+/* $Id$ The Snow theme for Tiki Wiki CMS Groupware is an original
 	theme released under the LGPL license by author and maintainer
 	Gary Cunningham-Lee (http://zukakakina.com). Visit zukakakina.com or themes.tiki.org for
 	updates and other information about this theme.
