--- a/styles/thenews.css
+++ b/styles/thenews.css
@@ -1,5 +1,5 @@
 /*
- * The News theme for Tiki CMS/Groupware -- uses the layout methods of litecss,
+ * The News theme for Tiki Wiki CMS Groupware -- uses the layout methods of litecss,
  * source ordered layout solution by luci (http://sourceforge.net/projects/litecss).
  * For more information, please visit http://themes.tiki.org or http://zukakakina.com.
  * Released under LPGL license. */
