[CSS] jqui: More reasonable margins for blogpost titles
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41410 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/jqui.css
+++ b/styles/jqui.css
@@ -630,7 +630,11 @@ body.tiki_cms h1 a.pagetitle:hover {border-bottom: none}
 	font-weight: bold;
 	font-size: 1.1em;
 }
-	
+
+.postbody-title h2 {
+	margin: .2em 0 .3em;
+}
+
 .postbody .actions {
 	text-align: right;
 	margin-bottom: 4px;
