--- a/styles/arcturus/options/amette.css
+++ b/styles/arcturus/options/amette.css
@@ -168,6 +168,16 @@ h1 a.pagetitle:hover {
 	text-decoration: none;
 }
 
+div.articletitle h2 a{
+	color: white;
+	background: #24880c url(amette/gradient.png) center center repeat-x;
+	text-decoration: none;
+}
+
+div.articletitle h2 a:hover{
+	color: blue;
+}
+
 .box {
 	background-color: #eef5ee;
 	border: none;
