--- a/styles/arcturus/options/amette.css
+++ b/styles/arcturus/options/amette.css
@@ -168,13 +168,22 @@ h1 a.pagetitle:hover {
 	text-decoration: none;
 }
 
-div.articletitle h2 a{
-	color: white;
+div.articletitle h2 a,
+div.articletitle h2 a:visited,
+div.articletitle h2 a:hover {
 	background: #24880c url(amette/gradient.png) center center repeat-x;
 	text-decoration: none;
 }
 
-div.articletitle h2 a:hover{
+div.articletitle h2 a,{
+	color: white;
+}
+
+div.articletitle h2 a:visited {
+	color: #eef5ee;
+}
+
+div.articletitle h2 a:hover {
 	color: blue;
 }
 
