[FIX]Usability fix for easier identification of unconfirmed options
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41463 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -1125,6 +1125,9 @@ tr.diffheader {
 .convene-no img { 
 	display: none;   
 }
+.convene-unconfirmed {
+	text-align: center; 
+}
 .conveneFooter, .conveneHeader {
 	text-align: center;
 }
