[FIX] eatlon/teal: Repair strange Firefox display issue where #middle was pushed out the right hand side of the page (sometimes).
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41483 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/eatlon/options/teal.css
+++ b/styles/eatlon/options/teal.css
@@ -48,6 +48,7 @@ body.fixed_width #fixedwidth {
 body.fixed_width .fixedwidth .fixedwidth {
 	width: 100%;
 	padding: 0;
+	display: inherit;
 }
 
 #middle {
@@ -369,7 +370,10 @@ input#fuser,
 	left: 10em;
 }
 
-#tiki-top ul.cssmenu_horiz {margin-left: 30px}
+#tiki-top ul.cssmenu_horiz {
+	margin-left: 30px;
+	position: absolute;
+}
 	
 #tiki-top .cssmenu_horiz a {
 	padding: 12px 1em;
