[FIX] Necessary CSS to prevent google API from displaying a pop-up on every map action
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41510 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -2472,4 +2472,10 @@ div.aclabel, span.aclabel, label.aclabel {
 .TextArea-fullscreen .cm-remove {
 	display: none;
 }
+
+.olLayerGoogleV3.olLayerGooglePoweredBy {
+	bottom: 15px !important;
+	visibility: hidden;
+}
+
 /* End of File */
