--- a/styles/fivealive/options/kiwi.css
+++ b/styles/fivealive/options/kiwi.css
@@ -147,6 +147,9 @@ select,
 input[type="text"],
 input[type="password"],
 input[type="file"],
+input[type="email"],
+input[type="file"],
+input[type="number"],
 input#login-pass,
 textarea,
 .adminoptionbox option  {
@@ -207,12 +210,14 @@ th.header {
 }
 
 .odd,
-.calodd {
+.calodd,
+table.normal tr:nth-child(2n+1) {
 	background: #f0e884;
 }
 
 .even,
-.caleven {
+.caleven,
+table.normal tr:nth-child(2n) {
 	background: #f8f9d4;
 }
 
