--- a/styles/fivealive/options/plum.css
+++ b/styles/fivealive/options/plum.css
@@ -145,6 +145,9 @@ select,
 input[type="text"],
 input[type="password"],
 input[type="file"],
+input[type="email"],
+input[type="file"],
+input[type="number"],
 input#login-pass,
 textarea,
 .adminoptionbox option {
@@ -205,12 +208,14 @@ th.header {
 }
 
 .odd,
-.calodd {
+.calodd,
+table.normal tr:nth-child(2n+1) {
 	background: #efcaf5;
 }
 
 .even,
-.caleven {
+.caleven,
+table.normal tr:nth-child(2n) {
 	background: #f3e1fb;
 }
 
