--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -1798,4 +1798,23 @@ form.simple textarea.export {
 	font-size: inherit;
 	width: 375px;
 }
+
+/* Maps */
+.olControlNavToolbar {
+    top: 345px !important;
+}
+.olControlMousePosition {
+    background: rgba(0, 0, 0, 0.75);
+    border-radius: 16px;
+    bottom: auto !important;
+    color: #FFF;
+    display: block;
+    font-family: Arial;
+    font-size: smaller;
+    padding: 0 8px;
+    position: absolute;
+    right: 6px !important;
+    top: 7px;
+}
+
 /* End of file */
