[FIX]Better integration with default theme
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/10.x@44906 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/BiDi/BiDi.css
+++ b/styles/BiDi/BiDi.css
@@ -508,10 +508,14 @@ input#login-pass_tiki-login, input#login-user_tiki-login {
     float: right;
 }
 
+form#loginbox-tiki-login fieldset div {
+    clear: both;
+}
+
 #loginbox-tiki-login input.button {
     clear: both;
     display: block;
-    margin: 5em auto 1em auto;
+    margin: 3em auto 1em auto;
 }
 
 /***** Miscellaneous *****/
