[FIX]Oupss... thanks jb for poking me
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/10.x@44910 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/BiDi/BiDi.css
+++ b/styles/BiDi/BiDi.css
@@ -30,7 +30,7 @@
  */
 
 /* Import RTL Theme specifics CSS files. */
-@import url("../greenvalley/rtl/greenvalley_BiDi.css");
+/* @import url("../greenvalley/rtl/greenvalley_BiDi.css"); */
 
 /* The following address mainly to fivealive, option blueberry theme which is the
  * default theme for a brand new installation. The theme specific should be set as
